add styles for bootstrap-style alerts

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -242,6 +242,18 @@ h3, h4 {
 }
 
 /*********
+* alerts *
+*********/
+
+.alert button.close {
+  padding-bottom: 40px;
+}
+
+.alert li {
+  list-style: none;
+}
+
+/*********
 * footer *
 *********/
 
