call the user#logout method when user clicks on the logout icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
                     <div class="dropdown-menu-row-container">
                       <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
                       <div class="dropdown-menu-row-text">
-                        <%= link_to "Log Out", new_record_path %>
+                        <%= link_to "Log Out", user_logout_path %>
                       </div>
                     </div>
                   </li>
