use :selected => to set initial choice of dropdown field

--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div class="field">
     <%= f.label :content_type, "Content Type" %>
-    <%= f.select :content_type, options_for_content_type, :prompt => "Image" %>
+    <%= f.select :content_type, options_for_content_type, :selected => "Image" %>
   </div>
 
   <div id="file-upload-container" class="field">
