add width: 100% to center video in record#show view

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -178,6 +178,10 @@ a.btn.btn-primary {
   padding-bottom: 20px;
 }
 
+#loaded-video {
+  width: 100%;
+}
+
 .record-details img {
   margin-bottom: 20px;
   display: block;
