rename class used to apply styles to user-uploaded assets in records#show

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -170,7 +170,7 @@ a.btn.btn-primary {
   margin-top: 30px;
 }
 
-.record-details .image-container {
+.record-details .record-display-container {
   width: 100%;
   background: #fff;
   border: 1px solid darkgray;
