--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -28,15 +28,20 @@
     </div>
 
     <% if @record.content_type == "Image" %>
-      <div class="image-container">
+      <div class="record-display-container">
         <%= image_tag @record.file_upload.url(:medium) %>
       </div>
-    <% else %>
-      <% if @record.content_type == "Video" %>
-        <div class="image-container">
-          <%= video_tag( @record.file_upload.url, poster: @record.file_upload.url(:medium), size: "300x300", id: "loaded-video", controls: true ) %>
-        </div>
-      <% end %>
+
+    <% elsif @record.content_type == "Video" %>
+      <div class="record-display-container">
+        <%= video_tag( @record.file_upload.url, poster: @record.file_upload.url(:medium), size: "300x300", id: "loaded-video", controls: true ) %>
+      </div>
+
+
+    <% elsif @record.content_type == "Audio" %>
+      <div class="record-display-container">
+        <%= audio_tag( @record.file_upload.url, controls: true,  id: "loaded-audio", autoplay: true ) %>
+      </div>
     <% end %>
 
     <div class="metadata-spacer"></div>
