update records#show html to style videos based and audio files based on class selectors rather than ids

--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'static_pages' %>
   <%= stylesheet_link_tag 'records' %>
+  <%= javascript_include_tag 'records' %>
 <% end %>
 
 <p id="notice"><%= notice %></p>
@@ -34,13 +35,13 @@
 
     <% elsif @record.content_type == "Video" %>
       <div class="record-display-container">
-        <%= video_tag( @record.file_upload.url, poster: @record.file_upload.url(:medium), size: "300x300", id: "loaded-video", controls: true ) %>
+        <%= video_tag( @record.file_upload.url, poster: @record.file_upload.url(:medium), size: "300x300", class: "loaded-video", controls: true ) %>
       </div>
 
 
     <% elsif @record.content_type == "Audio" %>
       <div class="record-display-container">
-        <%= audio_tag( @record.file_upload.url, controls: true,  id: "loaded-audio", autoplay: true ) %>
+        <%= audio_tag( @record.file_upload.url, controls: true,  class: "loaded-audio", autoplay: true ) %>
       </div>
     <% end %>
 
