update user#show html to include a header image

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -5,6 +5,10 @@
   <%= javascript_include_tag 'user' %>
 <% end %>
 
+<div class="small-banner-image-container students-image">
+  <%= image_tag("students.jpg") %> 
+</div>
+
 <div class="gray-background">
   <div class="container">
     <div class="masonry-container">
