update views to set the title of each page individually

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -3,6 +3,8 @@
   <%= stylesheet_link_tag 'records' %>
 <% end %>
 
+<% provide(:page_title, "Record Index") %>
+
 <div class="container">
 
   <h1>Listing records</h1>
