--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -4,6 +4,8 @@
   <%= javascript_include_tag 'records' %>
 <% end %>
 
+<% provide(:page_title, "New Record") %>
+
 <div class="small-banner-image-container students-image">
   <%= image_tag("students.jpg") %> 
 </div>
