--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -4,6 +4,8 @@
   <%= javascript_include_tag 'records' %>
 <% end %>
 
+<% provide(:page_title, "Show Record") %>
+
 <p id="notice"><%= notice %></p>
 
 <div class="small-banner-image-container students-image">
