--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,8 @@
   <%= javascript_include_tag 'static_pages' %>
 <% end %> 
 
+<% provide(:page_title, "Home") %>
+
 <!-- image with text and search overlays -->
 <div id="banner-image">
   <div id="text-overlay">
