--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,6 +2,8 @@
   <%= stylesheet_link_tag 'static_pages' %>
 <% end %>
 
+<% provide(:page_title, "Contact") %>
+
 <div class="small-banner-image-container students-image">
   <%= image_tag("students.jpg") %> 
 </div>
