--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -2,8 +2,9 @@
   <%= stylesheet_link_tag 'static_pages' %>
   <%= stylesheet_link_tag 'user' %>
   <%= stylesheet_link_tag 'records' %>
-
 <% end %>
+
+<% provide(:page_title, "Contributions") %>
 
 <div class="small-banner-image-container students-image">
   <%= image_tag("students.jpg") %> 
