--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -4,6 +4,11 @@
 
 *, *:before, *:after {box-sizing:  border-box !important;}
 
+/* overwrite wrap background color for user pages */
+#wrap {
+  background-color: #e6e6e6;
+}
+
 .masonry-container {
   padding-top: 50px;
   padding-bottom: 140px;
