add html and text email forms for contact mailer

--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Hi <%= @record.title %></h1>
+    <h1>Hi <%= @contact_form.message %></h1>
     <p>
       Sample mail sent using smtp.
     </p>
