--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -5,9 +5,7 @@
 
 <% provide(:page_title, "Contact") %>
 
-<div class="small-banner-image-container students-image">
-  <%= image_tag("students.jpg") %> 
-</div>
+<div class="small-banner-image-container students-image"></div>
 
 <div class="container">
   <div class="form-container">
