update app views to remove static_pages#contact and replace html requests for small background image to html placeholder that catches image from css

--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -8,9 +8,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="small-banner-image-container students-image">
-  <%= image_tag("students.jpg") %> 
-</div>
+<div class="small-banner-image-container students-image"></div>
 
 <div class="record-details-top">
   <h4 class="text-center">Confirmation</h4>
