--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -6,9 +6,7 @@
 
 <% provide(:page_title, "New Record") %>
 
-<div class="small-banner-image-container students-image">
-  <%= image_tag("students.jpg") %> 
-</div>
+<div class="small-banner-image-container students-image"></div>
 
 <div class="container">
   <div class="form-container">
