--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,9 +4,7 @@
 
 <% provide(:page_title, "About") %>
 
-<div class="small-banner-image-container students-image">
-  <%= image_tag("students.jpg") %> 
-</div>
+<div class="small-banner-image-container students-image"></div>
 
 <div class="container">
   <div class="form-container">
