update user#show html to display student image via css rather than html img tags

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -6,9 +6,7 @@
 
 <% provide(:page_title, "Contributions") %>
 
-<div class="small-banner-image-container students-image">
-  <%= image_tag("students.jpg") %> 
-</div>
+<div class="small-banner-image-container students-image"></div>
 
 <div class="gray-background">
   <div class="container">
