add styles for display to be shown to users on user#show if that user has no uploaded material

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -113,6 +113,11 @@ span.btn.btn-small.btn-default.btn-inverse {
 * record#show *
 **************/
 
+.invite-submissions-container {
+  height: 80px;
+  margin-top: 80px;
+}
+
 .record-details-top {
   margin: 40px 20% 40px;
 }
