--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -17,7 +17,8 @@ html, body {
 
 /* override bootstrap collapse styles */
 @media (max-width: 767px) {
-  /* restore and center the voices brand and remove bootstrap brand */
+  /* restore and center the voices brand 
+     and remove bootstrap brand */
   #voices-brand {
     display: none;
   }
@@ -28,7 +29,7 @@ html, body {
     position: absolute;
     font-size: 2.5em;
     width: 126px;
-    left: calc((100%/2) - (126px/2));
+    left: calc(50% - 63px);
     margin: 0;
     padding: 0;
     padding-top: 14px;
@@ -73,6 +74,12 @@ html, body {
   .navbar-text {
     float: none;
     margin: 15px 0;
+  }
+  .dropdown.open .glyphicon {
+    margin-left: calc(50% - 45px);
+  }
+  .dropdown.open .dropdown-menu {
+    background-color: #f5f5f5;
   }
 
   /* since 3.1.0 */
@@ -205,6 +212,7 @@ html, body {
 .navbar-default .navbar-nav > .open > a:focus {
   color: #555;
   background-color: #fff;
+  border-color: #a6a6a6;
 }
 /* caret */
 .navbar-default .navbar-nav > .dropdown > a .caret {
@@ -319,6 +327,12 @@ html, body {
   padding-bottom: 80px;
 }
 
+.page-content {
+  margin: 40px 20% 0px 20%;
+  overflow: auto;
+  padding-bottom: 180px;
+}
+
 .small-banner-image-container {
   width: 100%;
   height: 140px;
@@ -371,19 +385,18 @@ h3, h4 {
 * footer *
 *********/
 
-.page-content {
-  margin: 40px 20% 0px 20%;
-  overflow: auto;
-  padding-bottom: 180px;
-}
-
 #wrap {
   min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -140px;
+}
+
+.push {
+  height: 140px;
 }
 
 #footer {
-  position: relative;
-  margin-top: -140px;
   width: 100%;
   height: 140px;
   background-color: #666;
