--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
             <% if session[:cas_user] %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                  <%= session[:cas_user] %>
+                  <%= session[:cas_user].upcase %>
                   <span class="caret">
                   </span>
                 </a>
@@ -110,6 +110,8 @@
  
       <!-- page content -->
       <%= yield %>
+
+    <div class="push"></div>
 
   </div> <!-- /#wrap -->
   <div id="footer">
