--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -120,6 +120,20 @@ html, body {
     float: none;
     text-align: center;
   }
+
+  #profile-dropdown {
+    margin-top: 8px;
+  }
+
+  /* push the line items down in navbar */
+  .dropdown-toggle {
+    margin-top: 5px;
+  }
+
+  /* remove the downward push from the header image */
+  #voices-brand img {
+    margin-top: -5px;
+  }
 }
 
 /****************
@@ -142,7 +156,8 @@ html, body {
 
 .navbar #voices-brand {
   width: 180px;
-  padding-top: 14px;
+  padding-top: 8px;
+  padding-bottom: 2px;
 }
 
 .navbar #voices-brand img {
@@ -285,8 +300,9 @@ html, body {
   overflow: hidden;
   word-spacing: 3px;
   transform: scale(1.4);
-  font-family: 'Lato', sans-serif; 
   text-transform: lowercase;
+  font-family: 'Merriweather', serif;
+  line-height: 1;
 }
 
 #text-overlay div {
@@ -412,6 +428,7 @@ h3, h4 {
 #footer-left {
   float: left;
   padding: 40px;
+  font-family: 'Merriweather', serif;
 }
 
 #footer-left-top-brand,
@@ -427,6 +444,7 @@ h3, h4 {
 #footer-left-bottom {
   margin-left: 42px;
   font-style: italic;
+  font-weight: 100;
 }
 
 #footer-right {
