--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <%= link_to "VOICES", root_path, :id => "bootstrap-brand", :class => "navbar-brand" %>
+          <%= link_to(image_tag("voices-logo.png"), root_path, :id => "bootstrap-brand", :class => "navbar-brand") %>
         </div>
         
         <!-- navbar links -->
@@ -53,7 +53,7 @@
             </li>
 
             <li>
-              <%= link_to "VOICES", root_path, :id => "voices-brand" %>
+              <%= link_to(image_tag("voices-logo.png"), root_path, :id => "voices-brand") %>
             </li>
 
             <li>
