--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -298,19 +298,19 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  word-spacing: 3px;
   transform: scale(1.4);
   text-transform: lowercase;
   font-family: 'Merriweather', serif;
-  line-height: 1;
+  line-height: 1.35;
+  font-weight: 300;
 }
 
 #text-overlay div {
   float: left;
-  padding-right: 4px;
+  padding-right: 8px;
   color: #6f6f6f;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 13px;
   -webkit-transition: color 2s;
           transition: color 2s;
 }
