make SUBMIT button all caps

--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -60,7 +60,7 @@
 
   <div class="clear-floats"></div>
 
-  <%= button_tag(type: 'submit', class: "btn btn-primary", id: "submit-button") do %>
-    <i class="icon-ok icon-white"></i> Submit
+  <%= button_tag(type: 'submit', class: "btn btn-primary blue-button submit-button") do %>
+    <i class="icon-ok icon-white"></i> SUBMIT
   <% end %>
 <% end %>
