refactor records#new html to include a postscript and so that mobile view can have gray background

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -8,13 +8,19 @@
 
 <div class="small-banner-image-container students-image"></div>
 
-<div class="container">
-  <div class="form-container">
-    <h4 class="center-text">Contribute</h4>
+<div class="padding-sides">
+  <h4>Contribute</h4>
 
-    <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
+  <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
 
-    <%= render 'form' %>
-    
-  </div>
+</div>
+
+<div class="padding-sides padding-bottom mobile-background-gray">
+
+  <%= render 'form' %>
+
+  <div class="clear-floats"></div>
+
+  <div class="postscript-text">To discuss donating other collections of personal papers or organizational records to Manuscripts and Archives, please send inquiries to: mssa.donatematerials@yale.edu</div>
+  
 </div>
