update user#show button to match the home page CONTRIBUTE button

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -15,9 +15,9 @@
         <div class="center-text">Materials you contribute to the Voices archive will be available here.</div>
         <br>
 
-        <%= link_to "Contribute", 
-         {:controller => :records, :action => :new},
-         :class => "btn btn-primary center-button" %>
+          <%= link_to "CONTRIBUTE", 
+             {:controller => :records, :action => :new},
+             :class => "btn btn-primary wide-button blue-button" %>
       </div>
 
     <% else %>
